# malak

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 2026_03_17_0001_initial_schema.py  2026_03_17_0002_add_optimizations_and_billing.py  2026_03_17_0003_add_user_api_keys.py  2026_03_19_0004_add_fixit_columns.py  2026_03_19_0005_add_token_tables.py
api/src/: config.py  database.py  main.py  pipeline.py  worker.py
api/src/agents/: __init__.py  auditor.py  base.py  copywriter.py  logistics.py  scout.py  sentinel.py  spy.py  strategist.py
api/src/auth/: manager.py  models.py  router.py  schemas.py  subscription.py
api/src/integrations/: shopify.py  stripe.py
api/src/llm/: __init__.py  client.py
api/src/models/: __init__.py  audit.py  media.py  optimization.py  product.py  store.py  token.py
api/src/routes/: audit.py  autopilot.py  billing.py  chat.py  competitors.py  inventory.py  marketing.py  media.py  oauth.py  optimizations.py  optimize.py  products.py  reports.py  reviews.py  settings.py  shopify_billing.py  stores.py  tokens.py  translate.py  webhooks.py
api/src/scrapers/: __init__.py  amazon.py  base.py  mercadolibre.py  shopify.py  walmart.py
api/tests/: test_health.py  test_shopify_scraper.py
docs/plans/: 2026-03-17-kansa-billion-dollar-design.md  2026-03-17-malak-design.md  2026-03-17-malak-implementation-plan.md  2026-03-17-malak-v2-design.md  2026-03-17-malak-v2-phase1-plan.md  2026-03-19-amazon-optimizer-design.md
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
(+35 files in other folders)
