[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malak-api"
version = "0.1.0"
description = "Malak AI — Open source AI CMO for ecommerce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Max Nicolas Maupome" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",

    # Task queue
    "arq>=0.26.0",

    # Scraping
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "crawlee[playwright]>=0.5.0",
    "selectolax>=0.3.0",

    # Data validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # AI / LLM
    "openai>=1.58.0",
    "anthropic>=0.40.0",

    # Billing
    "stripe>=8.0.0",

    # Resilience & logging
    "tenacity>=9.0.0",
    "structlog>=24.0.0",

    # Utilities
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
